@@ -7,6 +7,8 @@ synaptic (0.70) UNRELEASED; urgency=low
     - updated, thanks to Matej Urbančič 
   * po/pt_BR.po:
     - updatd, thanks to Sergio Cipolla, closes: #579296
+  * gtk/rgmainwindow.cc:
+    - fix hang when applying the preferences (LP: #172487)
 
  -- Michael Vogt <mvo@debian.org>  Thu, 29 Jul 2010 12:13:18 +0200
 
